--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Science -- History'
 - !lcc 'Q'
+- GITenberg
 tableOfContents: 'Science and practical needs: Egypt and Babylonia -- The influence
   of abstract thought: Greece: Aristotle -- Scientific theory subordinated to application:
   Rome: Vitruvius -- The continuity of science: the medieval church and the Arabs
